@@ -309,6 +309,7 @@ AC_CONFIG_FILES([
       examples/book/buttons/Makefile
         examples/book/buttons/button/Makefile
         examples/book/buttons/checkbutton/Makefile
+        examples/book/buttons/filechooserbutton/Makefile
         examples/book/buttons/radiobutton/Makefile
         examples/book/buttons/togglebutton/Makefile
     examples/book/clipboard/Makefile
