@@ -1,6 +1,11 @@
 2005-01-09  Murray Cumming  <murrayc@murrayc.com>
 
-	* gtk/examples/treeview/list/examplewindow.[h|cc]: Add an extra 
+	* gtk/examples/book/buttons/: Added filechooserbutton example, 
+	though I see g_warnings.
+
+2005-01-09  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/examples/book/treeview/list/examplewindow.[h|cc]: Add an extra 
 	model column, rendered with a CellRendererProgress, to show that it 
 	works.
 
